--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
+    "build-endpoints": "docusaurus gen-api-docs all",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -19,8 +20,8 @@
     "@docusaurus/preset-classic": "3.4.0",
     "@mdx-js/react": "^3.0.0",
     "clsx": "^2.0.0",
-    "docusaurus-plugin-openapi-docs": "^2.1.3",
-    "docusaurus-theme-openapi-docs": "^2.1.3",
+    "docusaurus-plugin-openapi-docs": "^3.0.0-beta.10",
+    "docusaurus-theme-openapi-docs": "^3.0.0-beta.10",
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
