--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
     "build-endpoints": "docusaurus gen-api-docs all",
+    "clean-endpoints": "docusaurus clean-api-docs all",
     "typecheck": "tsc"
   },
   "dependencies": {
