--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "write-heading-ids": "docusaurus write-heading-ids",
     "build-endpoints": "docusaurus gen-api-docs all",
     "clean-endpoints": "docusaurus clean-api-docs all",
+    "update-endpoints": "npm run clean-endpoints && npm run build-endpoints",
     "typecheck": "tsc"
   },
   "dependencies": {
