--- a/api-endpoints/endpoints.yaml
+++ b/api-endpoints/endpoints.yaml
@@ -37,6 +37,12 @@ tags:
   - name: chat
     description: Chat Endpoints
     x-displayName: Chat
+  - name: message
+    description: Message Endpoints
+    x-displayName: Message
+  - name: reviews
+    description: Review Endpoints
+    x-displayName: Reviews
 paths:
   /:
     get:
@@ -659,6 +665,149 @@ paths:
           description: |
             - Some members were not found
             - {id} is not a friend of the owner
+        '401':
+          description: Unauthorized
+  /message/{id}:
+    get:
+      operationId: getMessage
+      security: 
+        -  JWT: []
+      tags: 
+        -  message
+      summary: Get message
+      description: Get message from id
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the message
+          schema: 
+            type: string
+        - name: author
+          in: query
+          required: false
+          description: Get author too
+          schema: 
+            type: boolean
+        - name: chat
+          in: query
+          required: false
+          description: Get chat too
+          schema: 
+            type: boolean
+      responses: 
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Message"
+        '401':
+          description: Unauthorized
+        '405':
+          description: Not Allowed
+    post:
+      operationId: sendMessage
+      security: 
+        -  JWT: []
+      tags: 
+        - message
+      summary: Post message
+      description: Creates a message in the specified chat
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of the chat
+          schema: 
+            type: string
+      requestBody: 
+        required: true
+        content:
+          application/json:
+            schema: 
+              type: object
+              properties:
+                message:
+                  type: string
+                  example: Example message
+      responses: 
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema: 
+                $ref: "#/components/schemas/Message"
+        '401':
+          description: Unauthorized
+        '405':
+          description: Not Allowed
+  /review/written/{userid}:
+    get:
+      operationId: getWrittenReviews
+      security: 
+        -  JWT: []
+      tags: 
+        - reviews
+      summary: Get written reviews
+      description: Get the last 20 written reviews of the user
+      parameters:
+        - name: userid
+          in: path
+          required: true
+          description: ID of the user
+          schema: 
+            type: string
+        - name: offset
+          in: query
+          required: false
+          description: Offset (Use 20 to get the next 20 written reviews)
+          schema: 
+            type: number
+            example: 20
+      responses: 
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items: 
+                  $ref: "#/components/schemas/Review"
+        '401':
+          description: Unauthorized
+  /review/recieved/{userid}:
+    get:
+      operationId: getRecievedReviews
+      security: 
+        -  JWT: []
+      tags: 
+        - reviews
+      summary: Get recieved reviews
+      description: Get the last 20 recieved reviews of the user
+      parameters:
+        - name: userid
+          in: path
+          required: true
+          description: ID of the user
+          schema: 
+            type: string
+        - name: offset
+          in: query
+          required: false
+          description: Offset (Use 20 to get the next 20 recieved reviews)
+          schema: 
+            type: number
+            example: 20
+      responses: 
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items: 
+                  $ref: "#/components/schemas/Review"
         '401':
           description: Unauthorized
 
